--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,137 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+body{
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+background-color: gainsboro;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.img{
+  float: left;
+  
 }
+.leftsize{
+ 
+  width: 20%;
+  height: 500px;
+  background-color: white;
+  float: left;
+}
+.reghtside{
+  width: 80%;
+  height: 150px;
+  background-color: white;
+  margin-bottom: 1%;
+  margin-left: 2%;
+}
+.inerleftside{
+  width: 80%;
+ height: 10%;
+  margin-bottom: 1%;
+  padding: 2%;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.free{
+  color: cyan;
+}
+.price{
+ color: slategray;
+}
+.name{
+
+margin-left: 10%;
+ 
+}
+.icon{
+  margin-top: -2%;
+  margin-left: 65%;
+  color: sandybrown;
+}
+.bt{
+  margin-top: -2%;
+  float: right;
+}
+.text{
+  font-size: small;
+ padding-left: 5%;
+ margin-top: -28px; 
+}
+.textlocation{
+  font-size: 10px;
+}
+.star{
+  color: sandybrown;
+}
+.nortext{
+  padding-left: 10%;
+}
+.mai{
+  color: rgb(6, 77, 6);
+  margin-left: 15%;
+  font-size: small;
+}
+.mai1{
+  background-color: gainsboro;
+  border-radius: 10%;
+  padding: 1%;
+  
+}
+.mai2{
+  padding: 1%;
+  margin-left: 3%;
+  background-color: gainsboro;
+  border-radius: 10%;
+  
+}
+.mai3{
+  padding: 1%;
+  margin-left: 3%;
+  background-color: gainsboro;
+  border-radius: 10%;
+  
+}
+.mai4{
+  padding: 1%;
+  margin-left: 3%;
+  background-color: gainsboro;
+  border-radius: 10%;
+  
+}
+.btbg{
+ background-color: sandybrown; 
+}
+.topside{
+  margin-top: 2%;
+  margin-left: -7%;
+ 
+}
+.topside1{
+  margin-top: 2%;
+  margin-left: -7%;
+  margin-right: 16%;
+ 
+}
+.morecolor{
+  color:green;
+}
+.headertext{
+  color: sandybrown;
+  text-decoration: underline;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+.headericoncolor{
+  color: sandybrown;
+}
+.hederleft{
+  margin-left: 20%;
+  
+
+}
+.hed{
+  margin-top: 3%;
+}
+.headerbac{
+  background-color: rgb(142, 212, 169);
+  color: rgb(142, 212, 169);
+  border-radius: 50%;
+ 
 }
